# cwltest

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README.rst  appveyor.yml  conftest.py  dev-requirements.txt  mypy-requirements.txt  mypy.ini  pyproject.toml  pytest-plugin.md  release-test.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci-tests.yml  codeql-analysis.yml
cwltest/: __init__.py  __main__.py  argparser.py  arvfsaccess.py  compare.py  cwl_junit_xml.py  cwltest-schema-strict.yml  cwltest-schema.yml  hooks.py  main.py  plugin.py  stdfsaccess.py  utils.py
cwltest/tests/: mock_cwl_runner.py  test_argparse.py  test_categories.py  test_compare.py  test_exclude_tags.py  test_integer_id.py  test_multi_lined_doc.py  test_prepare.py  test_short_names.py  test_string_id.py  test_timeout.py  util.py
cwltest/tests/test-data/: exclude-tags.yml  short-names.yml  timeout.cwl  with-and-without-short-names.yml
docs/: conf.py  index.rst  pytest.rst  requirements.txt
mypy-stubs/: junit_xml.pyi
mypy-stubs/apiclient/: errors.pyi  errors.pyi~
mypy-stubs/arvados/: __init__.pyi~  api.pyi  api.pyi~  api_resources.pyi  api_resources.pyi~  arvfile.pyi  arvfile.pyi~  collection.pyi  collection.pyi~  errors.pyi  errors.pyi~  keep.pyi  keep.pyi~  util.pyi  util.pyi~
mypy-stubs/defusedxml/: ElementTree.pyi
sample_plugin_impl/: conftest.py
src/cwltest/: compare.py  main.py  plugin.py
tests/: __init__.py  test_argparse.py  test_badgedir.py  test_categories.py  test_compare.py  test_exclude_tags.py  test_integer_id.py  test_invalid_outputs.py  test_multi_lined_doc.py  test_numeric_id.py  test_plugin.py  test_prepare.py  test_short_names.py  test_string_id.py  test_timeout.py  util.py
tests/test-data/: badgedir.yaml  conformance_test_v1.0.yml  conformance_test_v1.2.cwltest.yaml  conftest.py  cwltool-conftest.py  dummy-executor.sh  integer-id.cwltest.yml  integer-id.yml  mock_cwl_runner.py  multi-lined-doc.yml  nothing.yml  optional-error.yml  optional-unsupported.yml  required-unsupported.yml  short-names.yml  string-id.yml  timeout.yml  true.cwl
tests/test-data/v1.0/: args.py  cat-n-job.json  cat1-testcli.cwl
travis/: os_install.sh
typeshed/: junit_xml.pyi
typeshed/2.7/: StringIO.pyi  __builtin__.pyi  io.pyi  junit_xml.pyi  subprocess32.pyi  typing.pyi
typeshed/2.7/emoji/: __init__.pyi  core.pyi  unicode_codes.pyi
