[aliases]
test = pytest

[metadata]
name = cwltest
author = Common workflow language working group
author_email = common-workflow-language@googlegroups.com
license = Apache 2.0
description = Common Workflow Language testing framework
url = https://github.com/common-workflow-language/cwltest
download_url = https://github.com/common-workflow-language/cwltest
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
package_dir =
    cwltest.tests = tests
packages = cwltest, cwltest.tests
zip_safe = True
setup_requires = setuptools_scm>=8.0.4,<9
install_requires = file: requirements.txt
include_package_data = True
python_requires = >=3.8,<3.13
test_suite = tests

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[options.entry_points]
console_scripts = cwltest=cwltest.main:main
pytest11 = cwl = cwltest.plugin [pytest-plugin]

[options.extras_require]
pytest-plugin = pytest

[options.package_data]
cwltest = py.typed
tests = test-data/*
